force-app/main/default/objects/BMCServiceDesk__Scanner__c/BMCServiceDesk__Scanner__c.object-meta.xml
<CustomObject>
    <description>To store scanner device information.</description>
    <label>Scanner</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scanners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>