force-app/main/default/objects/BMCServiceDesk__Scanner__c/fields/BMCServiceDesk__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeviceId__c</fullName>
    <description>To store Id of the scanner device.</description>
    <label>Device Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>