force-app/main/default/objects/BMCServiceDesk__Scanner__c/fields/BMCServiceDesk__DeviceIPAddress__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeviceIPAddress__c</fullName>
    <description>To store IP address of the scanner device.</description>
    <label>Device IP Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>