force-app/main/default/objects/BMCServiceDesk__Scanner__c/fields/BMCServiceDesk__DeviceLocation__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeviceLocation__c</fullName>
    <description>To store location of the scanner device.</description>
    <label>Device Location</label>
    <type>TextArea</type>
</CustomField>