force-app/main/default/objects/BMCServiceDesk__Scanner__c/fields/BMCServiceDesk__DeviceName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DeviceName__c</fullName>
    <description>To store name of the scanner device.</description>
    <label>Device Name</label>
    <type>TextArea</type>
</CustomField>