force-app/main/default/objects/BMCServiceDesk__Scanner__c/fields/BMCServiceDesk__MarkAsDeleted__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the scanner device is deleted or not.</description>
    <label>Mark As Deleted</label>
    <type>Checkbox</type>
</CustomField>